--- a/style.css
+++ b/style.css
@@ -358,33 +358,22 @@
   #seven_section {
     background-color: aqua;
     width: 100%;
-    height: 1000px;
-    top: 821px;
-    left: -1528px;
+    height: 1100px;
   }
 
   #seven_section_parent_div {
-    width: 100%;
-    height: 550px;
+    width: 600px;
+    height: 600px;
     position: relative;
     background-color: pink;
     display: flex;
-    align-items: center;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
     flex-wrap: wrap;
   }
 
-  #seven_section_child_div1 {
-    width: 25%;
-    height: 40%;
-    background-color: red;
-    border: 3px solid black;
-    margin: 10px;
-    position: static;
-  }
-
-  #seven_section_child_div2 {
-    width: 25%;
+  .seven_section_child_div {
+    width: 40%;
     height: 40%;
     background-color: red;
     border: 3px solid black;
@@ -396,32 +385,22 @@
     2) 2 блок перестал существовать и осталось только название*/
 
 
-  #seven_section_child_div3 {
-    width: 25%;
-    height: 40%;
-    background-color: red;
-    border: 3px solid black;
-    margin: 10px;
-    position: static;
-  }
 
-  #seven_section_child_div4 {
-    width: 25%;
-    height: 40%;
-    background-color: red;
-    border: 3px solid black;
-    margin: 10px;
-    position: static;
-  }
 
   #seven_section_pictures {
+    margin-top: 1%;
     height: 400px;
-    width: 1000%;
+    width: 100%;
     position: absolute;
+    justify-content: center;
   }
 
   #seven_section_pictures_img1 {
     position: absolute;
+    width: 590px;
+    height: 400px;
+    margin-top: 1%;
+    z-index: 0;
   }
 
   #seven_section_pictures_img2 {
@@ -430,6 +409,7 @@
     left: 135px;
     width: 250px;
     height: 250px;
+    z-index: 1;
   }
 
   #seven_section_pictures_img3 {
@@ -438,7 +418,7 @@
     left: 25px;
     width: 170px;
     height: 170px;
-
+    z-index: 1;
   }
 
   #seven_section_pictures_img4 {
@@ -447,6 +427,7 @@
     left: 150px;
     width: 120px;
     height: 120px;
+    z-index: 1;
   }
 
   #seven_section_pictures_img5 {
@@ -455,6 +436,7 @@
     top: 330px;
     height: 77px;
     width: 77px;
+    z-index: 1;
   }
 
   #seven_section_pictures_img6 {
@@ -463,6 +445,7 @@
     width: 80px;
     top: 75px;
     left: 420px;
+    z-index: 1;
   }
 
   #seven_section_pictures_img7 {
@@ -471,6 +454,7 @@
     width: 50px;
     left: 118px;
     top: 303px;
+    z-index: 1;
 
   }
 
@@ -480,6 +464,7 @@
     top: 168px;
     height: 40px;
     width: 40px;
+    z-index: 1;
   }
 
   #eight_section {
@@ -516,11 +501,24 @@
   /* nine_secion */
 
   #nine_section_block_horizontal {
-    width: 150px;
-    height: 90px;
     color: red;
     background-color: blue;
     margin: 10px;
+  }
+
+  .vert-small {
+    width: 100px;
+    height: 90px;
+  }
+
+  .vert-middle {
+    width: 200px;
+    height: 90px;
+  }
+
+  .vert-big {
+    width: 300px;
+    height: 90px;
   }
 
   #nine_section_block_vertical {
@@ -547,7 +545,6 @@
     height: 215px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     flex-wrap: wrap;
 
   }
@@ -614,7 +611,7 @@
   #nine_section_scheme_nine {
     background-color: rgb(205, 214, 40);
     width: 100%;
-    height: 150px;
+    height: 200px;
     display: flex;
     align-items: center;
     margin-bottom: 1%;
@@ -671,6 +668,8 @@
   }
 
   .div {
+    flex-wrap: wrap;
+    align-content: flex-end;
     justify-content: space-around;
     display: flex;
     margin-bottom: 10px;
@@ -935,10 +934,12 @@
   }
 
   /* 1 option -оцентровать по горизонтали и вертикали все элементы внутри своих ячеек*/
-  .fifteen-section__grid-container__option-grid-1 {
-
-    justify-items: center;
-    align-items: center;
+  .fifteen-section__grid-container__grid-15--center {
+    justify-self: center;
+    align-self: center;
+    width: 50%;
+    height: 50%;
+    background-color: rgba(18, 197, 72, 0.8);
   }
 
   /* 2 случай - оцентровать по горизонтали и вертикали всю grid-сетку внутри ее родителя; */
@@ -952,6 +953,8 @@
     grid-row: 2 / 3;
     align-self: center;
     justify-self: center;
+    height: 50%;
+    width: 50%  ;
   }
 
   .fifteen-section__grid-container__grid-15 {
@@ -996,6 +999,8 @@
     margin: 1%;
     border: #05111b solid;
   }
+
+
 
   /* элементы flexbox контейнера подчиняются тем же свойствам что и элементы grid-контейнера, но grid-сетка позволяет работать сразу с вертикальной и горизонтальной осью*/
 }
